# mean-var-std-dev-calculator

./: mean_var_std.py  pyproject.toml  replit_zip_error_log.txt
.upm/: store.json
